支持http请求，增加命令队列，修改定时任务的入口

--- a/logic/src/main/resources/node.properties
+++ b/logic/src/main/resources/node.properties
@@ -1,5 +1,5 @@
 # 服务器全局唯一id
-server.uniqueId = 1
+server.uniqueId = 3
 
 # 服务器编码
 node.app = xyz
@@ -7,7 +7,7 @@ node.id = 1
 node.type = logic
 node.cluster = android
 node.ip = 127.0.0.1
-node.port = 8888
+node.port = 8810
 
 # cluster服务器地址
 cluster.server.list = 127.0.0.1:8848
@@ -19,8 +19,8 @@ redis.password = 123456
 redis.database = 0
 redis.idleSize = 4
 
-# mysql
-database.list = logic,login,log
+# mysql logic,login,log
+database.list = logic
 
 # logic
 jdbc.logic.datasource.name = com.zaxxer.hikari.HikariDataSource
