--- a/login/src/main/resources/node.properties
+++ b/login/src/main/resources/node.properties
@@ -1,13 +1,13 @@
 # 服务器全局唯一id
-server.uniqueId = 2
+server.uniqueId = 1
 
 # 服务器编码
 node.app = xyz
 node.id = 1
 node.type = login
-node.cluster = logic
+node.cluster = common
 node.ip = 127.0.0.1
-node.port = 8889
+node.port = 8808
 
 # cluster服务器地址
 cluster.server.list = 127.0.0.1:8848
